# Data-Export-Automation-Flask

./: .gitignore  main.py  pyproject.toml  requirements.txt
app/config/: db_config.py  test_connection.py
app/dags/: etl_dags.py
app/services/: etl_payments_data.py
